update findEntries
